[REVISION 20071128]

[FIXED] Workaround to ensure plugin is only ever loaded once.

[REVISION 20070321]

[FIXED] Sub-class meta-data missing if loaded before super-class.

[REVISION 20070302]

[NEW] Validation may be limited to specific columns by calling schema_validations from within your model class, passing either a single column (:only => :name) or an array of columns (:except => [:isocode, :iddcode]).

[CHANGED] Use symbols rather than strings when calling validation methods as this seems to be the "way of the future" :).

[REVISION 20070224]

[FIXED] Removed useless assignment of class variable.

[REVISION 20070221]

[NEW] Where possible, validates_uniqueness_of adds the :case_sensitivity option based on the presence of case-insensitive indexes.

[REVISION 20061203]

[CHANGED] Lazily load meta-data during allocate/new rather than inherited.

[FIXED] Explicit table name ignored.

[REVISION 20061202]

[CHANGED] Use Rails 1.2 alias_method_chain.

[CHANGED] Separate modules into individual files.

[REVISION 20061114]

[FIXED] NOT NULL columns with a default not marked as required for update.

[REVISION 20061013]

[NEW] install.rb informs user of missing dependencies.

[REVISION 20061012]

[CHANGED] Only read meta-data for base-classes.

[REVISION 20061011]

[CHANGED] Use include rather than extend in init.rb as this is more general. Plugin code can then determine if it needs to use extend or not.

[REVISION 20061020]

[FIXED] Breaks abstract class inheritance. If classes are named 'AbstractXxx' they will be treated as abstract. This is somewhat of a work-around for the current implementation however I believe it is a sensible choice for now.

[REVISION 20060924]

[FIXED] validates_uniqueness_of causes new records to fail when nullable column is null and there exists another record where the value of the column is also null. NULL values should always be considered unique.

[REVISION 20060915]
